--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>TODO App</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./index.css" type="text/css">
     </head>
     <body>
         <div class="header">
