--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>ToDo App</h1>
+            <h1>TODO App</h1>
             <input type="text" placeholder="Title" id="task">
             <button type="submit" id="submit">Add</button><br>
             <button id="clearAll">Clear All</button>
